syntax = "proto3";

package partyaffairs.api.partyaffairs.resource.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "partyaffairs.api.partyaffairs.resource.v1";
option java_outer_classname = "ResourceV1";

import "validate/validate.proto";

message GetResourceRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
} 

message GetResourceReply {
  message Classify{
    uint32 id = 1;
    string name =2;
  }
  uint32 id = 1;
  uint32 classifyId = 2;
  string title = 3;
  string description = 4;
  string url = 5;
  uint32 downloadCount = 6;
  Classify classify = 7;
  uint32 createdAt =9;
  uint32 updatedAt = 10;
}

message ListResourceRequest {
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1,lte:50}];
  optional string title = 3[(validate.rules).string = {min_len: 1,max_len: 40}];
  optional uint32 classifyId = 4;
}

message ListResourceReply {
  message Classify{
    uint32 id = 1;
    string name =2;
  }


  message Resource {
    uint32 id = 1;
    uint32 classifyId = 2;
    string title = 3;
    string description = 4;
    string url = 5;
    uint32 downloadCount = 6;
    Classify classify = 7;
    uint32 createdAt =9;
    uint32 updatedAt = 10;
  }
  uint32 total = 1;
  repeated Resource list = 2;
}

message CreateResourceRequest {
  string title = 1[(validate.rules).string = {min_len: 1}];
  string description = 2[(validate.rules).string = {min_len: 1}];
  string url = 3[(validate.rules).string = {min_len: 1}];
  uint32 classifyId = 4[(validate.rules).uint32 = {gt: 0}];
}

message CreateResourceReply {
  uint32 id = 1;
}

message UpdateResourceRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
  string title = 2;
  string description = 3;
  string url = 4;
  uint32 classifyId = 5;
}

message UpdateResourceReply {
}

message DeleteResourceRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message DeleteResourceReply {
}

