syntax = "proto3";

package partyaffairs.api.partyaffairs.resource.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "partyaffairs.api.server.partyaffairs.classify.v1";
option java_outer_classname = "ClassifyV1";

import "validate/validate.proto";

message ListResourceClassifyRequest {
}

message ListResourceClassifyReply {
  message ResourceClassify {
    uint32 id = 1;
    string name = 2;
    uint32 weight = 3;
    uint32 createdAt = 4;
    uint32 updatedAt = 5;
  }

  repeated ResourceClassify list = 2;
}

message CreateResourceClassifyRequest {
  string name = 1[(validate.rules).string = {min_len: 1}];
  uint32 weight = 2;
}

message CreateResourceClassifyReply {
  uint32 id = 1;
}

message UpdateResourceClassifyRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
  string name = 2[(validate.rules).string = {min_len: 1}];
  uint32 weight = 3;
}

message UpdateResourceClassifyReply {
}

message DeleteResourceClassifyRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte:0}];
}

message DeleteResourceClassifyReply {
}

